targeting-service-main/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: targeting-ingress
  namespace: toggle
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /targeting(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: targeting-service
            port:
              number: 8003
